# bigdict

./: .gitignore  CHANGELOG  CHANGELOG.md  Dockerfile-dev  Dockerfile-release  LICENSE  MANIFEST.in  README.md  README.rst  build-wheels.sh  check-code  make-release  pyproject.toml  run  run-tests  setup.py
archive/: Dockerfile  Dockerfile-dev  install-deps  make-release  repair-wheels.sh  run-tests  setup.cfg
src/bigdict/: __init__.py  _bigdict.py
tests/: test_bigdict.py
tests/benchmark/: bench_encoding.py  bench_pickle.py  benchmark.py  benchmarks.md  del.py  hash.py
tests/data010/: info.json
tests/data010/db/: 000010.sst  IDENTITY  LOG  LOG.old.1680933957272869  LOG.old.1681064210622739  LOG.old.1684912589498782  LOG.old.1686984767064258  LOG.old.1687152625585572  LOG.old.1691991153893346  MANIFEST-000005  OPTIONS-000005  OPTIONS-000008
