[metadata]
name = bigdict
version = attr: bigdict.__version__
description = A persisted, out-of-memory dict for Python
python_requires = >=3.6
url = https://github.com/zpz/bigdict
author = Zepu Zhang
author_email = zepu.zhang@gmail.com

[options]
include_package_data = True
package_dir = 
    = src
packages = find:

[options.packages.find]
where = src

[options.package_data]
bigdict = py.typed

[bdist_wheel]
universal=0
